fix: add Hack font to code, fix inline code whitespace

--- a/_includes/prism-a11y-dark.css
+++ b/_includes/prism-a11y-dark.css
@@ -8,7 +8,7 @@
  pre[class*="language-"] {
      color: #f8f8f2;
      background: none;
-     font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+     font-family: Hack, Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
      text-align: left;
      white-space: pre;
      word-spacing: normal;
@@ -16,14 +16,17 @@
      word-wrap: normal;
      line-height: 1.5;
  
-     -moz-tab-size: 4;
-     -o-tab-size: 4;
-     tab-size: 4;
+     -moz-tab-size: 2;
+     -o-tab-size: 2;
+     tab-size: 2;
  
      -webkit-hyphens: none;
      -moz-hyphens: none;
      -ms-hyphens: none;
      hyphens: none;
+ }
+ pre > code {
+     white-space: normal;
  }
  
  /* Code blocks */
